Hide Hg as default in context menu

--- a/rabbitvcs-0.18/rabbitvcs/util/configspec/configspec.ini
+++ b/rabbitvcs-0.18/rabbitvcs/util/configspec/configspec.ini
@@ -23,6 +23,6 @@ type = option("None", "File", "Console", "Both", default="Both")
 level = option("Debug", "Warning", "Info", "Error", "Critical", default="Error")
 
 [HideItem]
-svn = boolean(default=False)
-hg = boolean(default=False)
+svn = boolean(default=True)
+hg = boolean(default=True)
 git = boolean(default=False)
