--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Standards-Version: 3.9.5
 Package: hamonikr-nemo-rabbitvcs
 Architecture: all
 Depends: nemo, nemo-data, nemo-python, rabbitvcs-core
-Replaces: rabbitvcs-nautilus
+Replaces: rabbitvcs-core, rabbitvcs-nemo
 Description: Source code Version Control Tool for HamoniKR
  소스 코드 버전을 관리할 수 있는 프로그램.
