--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Standards-Version: 3.9.5
 
 Package: hamonikr-nemo-rabbitvcs
 Architecture: all
-Depends: pip, nemo, nemo-data, python-nemo, rabbitvcs-core
+Depends: 
 Replaces: rabbitvcs-core, rabbitvcs-nemo
+Recommends: git, pip, python-nemo             
 Description: Source code Version Control Tool for HamoniKR
  소스 코드 버전을 관리할 수 있는 프로그램.
