--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.9.5
 
 Package: hamonikr-nemo-rabbitvcs
 Architecture: all
-Depends: 
+Depends: rabbitvcs-core
 Replaces: rabbitvcs-core, rabbitvcs-nemo
 Recommends: git, pip, python-nemo             
 Description: Source code Version Control Tool for HamoniKR
