--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,14 @@ Standards-Version: 3.9.5
 
 Package: hamonikr-nemo-rabbitvcs
 Architecture: all
-Depends: rabbitvcs-core
+Depends: rabbitvcs-core,
+         python3-gi,
+         python3-gi-cairo,
+         gir1.2-gtk-4.0,
+         gir1.2-adw-1
 Replaces: rabbitvcs-core, rabbitvcs-nemo
-Recommends: git, pip, python-nemo             
+Recommends: git, pip, python-nemo,
+            libgtk-4-1,
+            libadwaita-1-0             
 Description: Source code Version Control Tool for HamoniKR
  소스 코드 버전을 관리할 수 있는 프로그램.
